--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -65,7 +65,7 @@ jobs:
       run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
     
     - name: Insert passwall feeds
-      run: cd openwrt && echo "src-git extraPackages https://github.com/hoticebeijing/openwrt-packages.git" >> feeds.conf.default
+      run: cd openwrt && echo -e "\nsrc-git extraPackages https://github.com/hoticebeijing/openwrt-packages.git" >> feeds.conf.default
 
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
