--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -68,7 +68,7 @@ jobs:
       run: cd openwrt && echo -e "\nsrc-git extraPackages https://github.com/hoticebeijing/openwrt-packages.git" >> feeds.conf.default
     
     - name: Insert Lienol Lede  feeds
-      run: cd openwrt && echo -e "\nsrc-git lienol-op https://github.com/Lienol/openwrt-package" >> feeds.conf.default   
+      run: cd openwrt && echo -e "\nsrc-git lienolop https://github.com/Lienol/openwrt-package" >> feeds.conf.default   
 
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
