--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -65,11 +65,10 @@ jobs:
       run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
     
     - name: Insert passwall feeds
-      run: cd openwrt && echo -e "\nsrc-git extraPackages https://github.com/hoticebeijing/openwrt-packages.git" >> feeds.conf.default
-    
-    - name: Insert Lienol Lede  feeds
-      run: cd openwrt && echo -e "\nsrc-git lienolop https://github.com/Lienol/openwrt-package" >> feeds.conf.default   
-
+      run: |
+        cd openwrt
+        echo -e "\nsrc-git extraPackages https://github.com/hoticebeijing/openwrt-packages.git" >> feeds.conf.default
+        echo -e "\nsrc-git lienolop  https://github.com/Lienol/lean-lede.git" >> feeds.conf.default
     - name: Update feeds
       run: cd openwrt && ./scripts/feeds update -a
 
@@ -86,7 +85,7 @@ jobs:
         make defconfig
 
     - name: SSH connection to Actions
-      uses: P3TERX/debugger-action@master
+      uses: AndyLiu/debugger-action@master
       if: env.SSH_ACTIONS == 'true'
 
     - name: Download package
