--- a/.config
+++ b/.config
@@ -31,43 +31,51 @@ CONFIG_PACKAGE_brook=y
 CONFIG_PACKAGE_ca-bundle=y
 CONFIG_PACKAGE_ca-certificates=y
 CONFIG_PACKAGE_curl=y
+CONFIG_PACKAGE_ip-full=y
 CONFIG_PACKAGE_kmod-crypto-crc32c=y
 CONFIG_PACKAGE_kmod-fs-ext4=y
 CONFIG_PACKAGE_kmod-lib-crc16=y
-# CONFIG_PACKAGE_kmod-mmc is not set
-# CONFIG_PACKAGE_kmod-sdhci-mt7620 is not set
 CONFIG_PACKAGE_kmod-tun=y
 CONFIG_PACKAGE_kmod-udptunnel4=y
 CONFIG_PACKAGE_kmod-udptunnel6=y
 CONFIG_PACKAGE_kmod-wireguard=y
+CONFIG_PACKAGE_libcap=y
 CONFIG_PACKAGE_libcurl=y
+CONFIG_PACKAGE_libelf=y
 CONFIG_PACKAGE_liblzo=y
 CONFIG_PACKAGE_libopenssl-conf=y
 CONFIG_PACKAGE_libstdcpp=y
 CONFIG_PACKAGE_libuuid=y
+CONFIG_PACKAGE_libwebsockets-full=y
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
 CONFIG_PACKAGE_luci-app-aliddns=y
 CONFIG_PACKAGE_luci-app-aria2=y
-# CONFIG_PACKAGE_luci-app-fileassistant is not set
+CONFIG_PACKAGE_luci-app-arpbind=y
+CONFIG_PACKAGE_luci-app-autoreboot=y
 CONFIG_PACKAGE_luci-app-filebrowser=y
 CONFIG_PACKAGE_luci-app-openvpn=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Brook=y
 CONFIG_PACKAGE_luci-app-passwall_INCLUDE_Trojan=y
-# CONFIG_PACKAGE_luci-app-pppoe-relay is not set
-# CONFIG_PACKAGE_luci-app-pppoe-server is not set
-# CONFIG_PACKAGE_luci-app-pptp-vpnserver-manyusers is not set
 CONFIG_PACKAGE_luci-app-smartdns=y
+CONFIG_PACKAGE_luci-app-ttyd=y
 CONFIG_PACKAGE_luci-app-upnp=y
+CONFIG_PACKAGE_luci-i18n-adbyby-plus-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-aliddns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-arpbind-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-filebrowser-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-upnp-zh-cn=y
 CONFIG_PACKAGE_luci-theme-material=y
 CONFIG_PACKAGE_miniupnpd=y
 CONFIG_PACKAGE_openssl-util=y
 CONFIG_PACKAGE_openvpn-openssl=y
-# CONFIG_PACKAGE_pptpd is not set
-# CONFIG_PACKAGE_rp-pppoe-common is not set
-# CONFIG_PACKAGE_rp-pppoe-relay is not set
-# CONFIG_PACKAGE_rp-pppoe-server is not set
 CONFIG_PACKAGE_smartdns=y
 CONFIG_PACKAGE_trojan=y
+CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_vsftpd-alt=y
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_VSFTPD_USE_UCI_SCRIPTS=y
@@ -75,5 +83,6 @@ CONFIG_boost-compile-visibility-hidden=y
 CONFIG_boost-runtime-shared=y
 CONFIG_boost-static-and-shared-libs=y
 CONFIG_boost-variant-release=y
+CONFIG_PACKAGE_ip-tiny=y
 CONFIG_PACKAGE_kmod-gre=y
 CONFIG_PACKAGE_kmod-iptunnel=y
