--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -85,7 +85,7 @@ jobs:
         make defconfig
 
     - name: SSH connection to Actions
-      uses: P3TERX/debugger-action@master
+      uses: hoticebeijing/debugger-action@master
       if: env.SSH_ACTIONS == 'true'
 
     - name: Download package
