--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -24,8 +24,8 @@ on:
 env:
   REPO_URL: https://github.com/Lienol/openwrt
   REPO_BRANCH: dev-19.07
-  CONFIG_FILE: .config
-  FEEDS_CONF: x86-64.config	  
+  CONFIG_FILE: x86-64.config	
+  FEEDS_CONF: feeds.conf.default  
   DIY_SH: diy.sh
   FREE_UP_DISK: false
   SSH_ACTIONS: true
