--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -24,7 +24,7 @@ on:
 env:
   REPO_URL: https://github.com/Lienol/openwrt
   REPO_BRANCH: dev-19.07
-  CONFIG_FILE: x86-64.config	
+  CONFIG_FILE: .config	
   FEEDS_CONF: feeds.conf.default  
   DIY_SH: diy.sh
   FREE_UP_DISK: false
