--- a/.config
+++ b/.config
@@ -74,6 +74,7 @@ CONFIG_PACKAGE_luci-app-smartdns=y
 CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_V2ray=y
 CONFIG_PACKAGE_luci-app-ttyd=y
 # CONFIG_PACKAGE_luci-app-unblockmusic is not set
+# CONFIG_PACKAGE_luci-app-vsftpd is not set
 CONFIG_PACKAGE_luci-app-zerotier=y
 CONFIG_PACKAGE_luci-i18n-aliddns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-aria2-zh-cn=y
@@ -82,7 +83,9 @@ CONFIG_PACKAGE_luci-i18n-openvpn-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-zerotier-zh-cn=y
+CONFIG_PACKAGE_luci-theme-argon=y
 CONFIG_PACKAGE_luci-theme-material=y
+CONFIG_PACKAGE_luci-theme-netgear=y
 CONFIG_PACKAGE_openvpn-openssl=y
 CONFIG_PACKAGE_resolveip=y
 CONFIG_PACKAGE_smartdns=y
@@ -92,6 +95,7 @@ CONFIG_PACKAGE_trojan=y
 CONFIG_PACKAGE_ttyd=y
 CONFIG_PACKAGE_unzip=y
 CONFIG_PACKAGE_v2ray=y
+# CONFIG_PACKAGE_vsftpd-alt is not set
 CONFIG_PACKAGE_wireguard-tools=y
 CONFIG_PACKAGE_zerotier=y
 CONFIG_V2RAY_COMPRESS_UPX=y
